fixed badges impropperly wrapping on mobile

--- a/Personal Website/wwwroot/css/general.css
+++ b/Personal Website/wwwroot/css/general.css
@@ -100,6 +100,17 @@ a:not([href]):not([tabindex]):hover {
     font-weight: lighter;
 }
 
+.badge-group {
+    display: inline-block;
+}
+
+@media screen and (max-width: 480px) {
+    .badge-group {
+        visibility: hidden;
+        position: absolute;
+    }
+}
+
 .more-summary {
     --aug-tl: 10px;
     --aug-tr: 10px;
@@ -176,7 +187,7 @@ input:focus {
     }
 
     .img-grid-module img {
-        margin-top: 8px;
+        margin-top: 30px;
         vertical-align: middle;
         width: 100%;
     }
